...
			android:id="@+id/intro"
			style="@style/TextAppearance.AppCompat.Large"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:gravity="center"
			android:text="@string/setup_title"
			app:layout_constraintBottom_toTopOf="@+id/nickname_entry_wrapper"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/logo" />

		<com.google.android.material.textfield.TextInputLayout
...
			app:layout_constraintBottom_toTopOf="@+id/info_button"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/intro">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/nickname_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/choose_nickname"
				android:imeOptions="flagNoPersonalizedLearning|actionNext"
				android:inputType="text|textCapWords"
				android:maxLines="1" />
...
