...
	         If adding/removing strings here, consumers need to adapt.
	-->

	<string name="setup_doze_title">Background Connections</string>
	<string name="setup_doze_intro">To work properly, this app needs to run in the background.</string>
	<string name="setup_doze_explanation">Please disable battery optimizations so this app can run in the background.</string>
	<string name="setup_doze_button">Allow Connections</string>
	<string name="create_account_button">Continue</string>

	<string name="setup_huawei_text">Please tap the button below and make sure this app is protected in the \"Protected Apps\" screen.</string>
	<string name="setup_huawei_button">Protect this app</string>
	<string name="setup_huawei_help">If this app is not added to the protected apps list, it will be unable to run in the background.</string>
	<string name="setup_huawei_app_launch_text">Please tap the button below, open the \"App launch\" screen and make sure this app is set to \"Manage manually\".</string>
...
