...
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<!-- This is part of the main menu. The app will be locked when this is tapped. -->
	<string name="lock_button">Lock App</string>
	<string name="settings_button">Settings</string>
	<string name="sign_out_button">Sign Out</string>
	<string name="transports_onboarding_text">Tap here to control how Harbor connects to your contacts.</string>

	<!-- Transports: Tor -->
	<string name="transport_tor">Internet</string>
	<string name="tor_device_status_online_wifi">Your phone has Internet access via Wi-Fi</string>
...
	<string name="change_profile_picture_failed_message">We\'re sorry, but something went wrong while updating your profile picture</string>

	<!-- Settings Display -->
	<string name="pref_language_title">Language &amp; region</string>
	<string name="pref_language_changed">This setting will take effect when you restart Briar. Please sign out and restart Briar.</string>
	<string name="pref_language_default">System default</string>
	<string name="display_settings_title">Display</string>
	<string name="pref_theme_title">Theme</string>
	<string name="pref_theme_light">Light</string>
	<string name="pref_theme_dark">Dark</string>
	<string name="pref_theme_system">System default</string>

	<!-- Settings Connections -->
	<string name="network_settings_title">Connections</string>
	<string name="bluetooth_setting">Connect to contacts via Bluetooth</string>
	<string name="wifi_setting">Connect to contacts on the same Wi-Fi network</string>
	<string name="tor_enable_title">Connect to contacts via the Internet</string>
	<string name="tor_enable_summary">All connections go through the Tor network for privacy</string>
	<string name="tor_network_setting">Connection method for Tor network</string>
	<string name="tor_network_setting_automatic">Automatic based on location</string>
	<string name="tor_network_setting_without_bridges">Use Tor network without bridges</string>
	<string name="tor_network_setting_with_bridges">Use Tor network with bridges</string>
	<string name="tor_network_setting_never">Don\'t connect to the Internet</string>
	<!-- How and when Briar will connect to Tor: E.g. "Don't connect to the Internet (in China)" or "Use Tor network with bridges (in Belarus)" -->
	<string name="tor_network_setting_summary">Automatic: %1$s (in %2$s)</string>
	<string name="tor_mobile_data_title">Use mobile data</string>
	<string name="tor_only_when_charging_title">Connect to the Internet only when charging</string>
	<string name="tor_only_when_charging_summary">Disables Internet connection when device is running on battery</string>

	<!-- Settings Security and Panic -->
	<string name="security_settings_title">Security</string>
	<string name="pref_lock_title">App lock</string>
	<string name="pref_lock_summary">Use the device\'s screen lock to protect Briar while signed in</string>
	<string name="pref_lock_disabled_summary">To use this feature, set up a screen lock for your device</string>
	<string name="pref_lock_timeout_title">App lock inactivity timeout</string>
	<!-- The %s placeholder is replaced with the following time spans, e.g. 5 Minutes, 1 Hour -->
	<string name="pref_lock_timeout_summary">When not using Briar, automatically lock it after %s</string>
	<!-- Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s" -->
	<string name="pref_lock_timeout_1">1 minute</string>
	<!-- Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s" -->
	<string name="pref_lock_timeout_5">5 minutes</string>
...

	<string name="change_password">Change password</string>
	<string name="current_password">Current password</string>
	<string name="choose_new_password">New password</string>
	<string name="confirm_new_password">Confirm new password</string>
	<string name="password_changed">Password has been changed.</string>
	<string name="panic_setting">Panic button setup</string>
	<string name="panic_setting_title">Panic button</string>
	<string name="panic_setting_hint">Configure how Briar will react when you use a panic button app</string>
	<string name="panic_app_setting_title">Panic Button App</string>
	<string name="unknown_app">an unknown app</string>
	<string name="panic_app_setting_summary">No app has been set</string>
	<string name="panic_app_setting_none">None</string>
...
