<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".android.navdrawer.NavDrawerActivity">

	<!-- The first child(root) is the content view -->
...
				android:id="@+id/expiryWarningText"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@plurals/expiry_warning"
				android:textColor="@color/briar_text_primary_inverse"
				android:textSize="@dimen/text_size_small"
				app:layout_constraintEnd_toStartOf="@+id/expiryWarningClose"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/expiryWarningClose"
				android:layout_width="24dp"
...
