<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	android:id="@+id/drawer_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<!-- The first child(root) is the content view -->
	<include
		layout="@layout/activity_with_loading"/>

	<!-- The second child is the menu -->
	<include
		android:id="@+id/navigation_menu_drawer"
		layout="@layout/navigation_menu"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>